<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup"
    android:orientation="vertical">

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign Up!"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"/>

    <ImageView
        android:id="@+id/imgregis"
        android:layout_width="249dp"
        android:layout_height="184dp"
        app:srcCompat="@drawable/logo1"
        tools:layout_editor_absoluteX="81dp"
        tools:layout_editor_absoluteY="169dp"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/edregisuser"
        android:layout_width="221dp"
        android:layout_height="71dp"
        android:hint="@string/user"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/edregisemail"
        android:layout_width="221dp"
        android:layout_height="71dp"
        android:hint="@string/emaill"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/edregispass"
        android:layout_width="221dp"
        android:layout_height="71dp"
        android:hint="@string/pass"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/btnregis"
        android:layout_width="221dp"
        android:layout_height="71dp"
        android:text="Registrasi"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="95dp"
        tools:layout_editor_absoluteY="593dp"
        android:layout_gravity="center"/>

</LinearLayout>